@@ -1,5 +1,5 @@
 {
-  "count": 28,
+  "count": 29,
   "uniques": 5,
   "clones": [
     {
@@ -55,6 +55,11 @@
     {
       "timestamp": "2022-06-07T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-08T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
